# dredge

./: .gitignore  CXCORR.m  DCreg.m  DCreg_unsigned.m  LICENSE  README.md  interpMatrix.m  main.m  myXCORR.m  psolver.m  psolver_TF.m  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  python-publish.yml
APreg_MGH/: Demo_AP_Processing.py  Demo_align_pt02.mlx  Get_Global_timestamps_Demo.m
APreg_MGH/lib/global_timing/: align_TTL_timing.m
APreg_MGH/src/: APreg.py  Intarpolate_and_align_AP_2022.m
dredge-python/: README.md  setup.py
dredge-python/dredge/: dredge_ap.py  dredge_lfp.py  dredgelib.py  motion_util.py
dredge-python/notebook/: ap_registration.ipynb
matlab/: CXMI.m  DCreg.m  DCreg_unsigned.m  XMI.m  dftregistration.m  dredge.m  dredge_corr.m  dredge_mi.m  dredge_unsigned.m  fastShift.m  gauss_mi.m  main.m  mat_CXC.m  mat_CXMI.m  mat_FFTXC.m  mat_XC.m  mat_XMI.m  mat_corr.m  mat_gauss_mi.m  mycircshift.m  nanzscore.m  othercolor.m
notebook/: ap_registration.ipynb  introductory_demo.ipynb
notebook/example_data/: info.md
python/: Calc_CSD_for_all_patients.py  DBS05.ipynb  README.md  allpt.ipynb  batchreg.py  demo.ipynb  lfpreg.py  requirements.txt  setup.py  test_yoav.py
python/dredge/: dredge_ap.py  dredge_lfp.py  dredgelib.py  motion_util.py  requirements.txt
python/notebook/: batch.ipynb  longbatch.ipynb
python/reglib/: ap_filter.py  ibme.py  ibme_corr.py  ibme_fast_raster.pyx  icassp_utils.py  lfpreg.py  pixelCSD.py  pixelcsd.py
src/dredge/: __init__.py  dredge_ap.py  motion_util.py
(+4 files in other folders)
