[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dredge"
version = "0.2.3"
authors = [
  { name="Charlie Windolf", email="ciw2107@columbia.edu" },
]
description = "DREDge: Decentralized Registration for Electrophysiology Data (... ge)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/evarol/dredge"
"Bug Tracker" = "https://github.com/evarol/dredge/issues"

[tool.setuptools.packages.find]
where = ["python"]
